--- a/src/Counter/Display/Display.module.css
+++ b/src/Counter/Display/Display.module.css
@@ -10,13 +10,13 @@
 }
 
 .error {
-    padding-top: 10px;
-    margin: auto;
-    width: 300px;
+    width: 100%;
     height: 50px;
+    display: grid;
+    place-items: center;
     border: var(--primary-color) solid 2px;
     border-radius: 20px;
     background-color: var(--primary-color);
+    font-size: 40px;
     color: red;
-    font-size: 35px;
 }
