--- a/src/Counter/Display/Display.module.css
+++ b/src/Counter/Display/Display.module.css
@@ -1,22 +1,44 @@
 .display {
     width: 100%;
-    height: 50px;
+    height: 180px;
     display: grid;
     place-items: center;
     border: var(--primary-color) solid 2px;
     border-radius: 20px;
     background-color: var(--primary-color);
-    font-size: 30px;
+    font-size: 80px;
 }
 
 .error {
     width: 100%;
-    height: 50px;
+    height: 180px;
     display: grid;
     place-items: center;
     border: var(--primary-color) solid 2px;
     border-radius: 20px;
     background-color: var(--primary-color);
-    font-size: 40px;
+    font-size: 100px;
     color: red;
+}
+
+.conteiner {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    font-size: 20px;
+
+}
+
+.valueDisplay {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+input {
+    font-size: 30px;
+    width: 150px;
+    height: 30px;
+    border-radius: 4px;
+    border: solid 3px blueviolet;
 }
